--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -16,3 +16,7 @@
 </html>
 
 <!-- There will be other elements nested within the ones used here, but these are primary ones we will build off from :) PS: Notes are so cool, right?!-->
+
+    <!--analytics-->
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="http://tutsplus.github.io/github-analytics/ga-tracking.min.js"></script>
