--- a/lesson-6/index.html
+++ b/lesson-6/index.html
@@ -66,6 +66,10 @@
       </p>
     </footer>
 
+    <!--analytics-->
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="http://tutsplus.github.io/github-analytics/ga-tracking.min.js"></script>
+
   </body>
 
 </html>
